# pdftms

./: .gitignore  CMakeLists.txt  README.md  default.nix  package.nix  shell.nix
.cache/clangd/index/: config.cpp.D573B5D4997EDC1B.idx  config.hpp.4649208A574260AF.idx  main.cpp.8E5864EA3702AEBE.idx  utils.cpp.8A2889CF746F8323.idx  utils.hpp.1CE2CE1BFF32B949.idx
include/: commands.hpp  config.hpp  fs.hpp  utils.hpp
src/: commands.cpp  config.cpp  fs.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt  test_config.cpp  test_fs.cpp  test_utils.cpp
